# XiaoTuNetBox

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  setup.sh
build_tools/: obj.mk  subdirs.mk
cmake/: build_doxygen.cmake  config.cmake.in  config_version.cmake.in  install_package.cmake
doc/: Doxyfile.in
include/XiaoTuNetBox/: Acceptor.h  Address.h  Connection.h  ConnectionNode.h  DataArray.hpp  DataQueue.hpp  EPollEventHandler.h  EPollLoop.h  Event.h  EventHandler.h  EventLoop.h  Handler.h  HttpModuleUpgradeWs.h  HttpRequest.h  HttpResponse.h  HttpServer.h  HttpSession.h  HttpTask.h  InBufObserver.h  InputBuffer.h  PollEventHandler.h  PollLoop.h  SerialPort.h  Session.h  Socket.h  Task.h  TcpAppServer.h  TcpServer.h  ThreadTools.h  ThreadWorker.h  Timer.h  Types.h  Utils.h  VideoCapture.h  WakeUpper.h  WebSocketHandler.h  WebSocketMsg.h  WebSocketServer.h  WebSocketSession.h
include/XiaoTuNetBox/Event/: EPollEventHandler.h  EPollLoop.h  EventHandler.h  EventLoop.h  PollEventHandler.h  PollLoop.h  WakeUpper.h
include/XiaoTuNetBox/Http/: HttpHandler.h  HttpModule.h  HttpModuleCheckURL.h  HttpModuleGet.h  HttpModuleIdentify.h  HttpModuleLoadFile.h  HttpModuleLogin.h  HttpRequest.h  HttpResponse.h  HttpServer.h  HttpSession.h
src/: Acceptor.cpp  Address.cpp  Connection.cpp  ConnectionNode.cpp  EPollEventHandler.cpp  EPollLoop.cpp  EventHandler.cpp  EventLoop.cpp  HttpModuleUpgradeWs.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  HttpSession.cpp  InputBuffer.cpp  Makefile  PollEventHandler.cpp  PollLoop.cpp  SerialPort.cpp  Socket.cpp  TcpAppServer.cpp  TcpServer.cpp  ThreadTools.cpp  ThreadWorker.cpp  Timer.cpp  Utils.cpp  VideoCapture.cpp  WakeUpper.cpp  WebSocketHandler.cpp  WebSocketMsg.cpp  WebSocketServer.cpp  WebSocketSession.cpp  utils.cpp
src/Event/: EPollEventHandler.cpp  EPollLoop.cpp  EventHandler.cpp  EventLoop.cpp  PollEventHandler.cpp  PollLoop.cpp  WakeUpper.cpp
src/Http/: HttpHandler.cpp  HttpModule.cpp  HttpModuleCheckURL.cpp  HttpModuleGet.cpp  HttpModuleIdentify.cpp  HttpModuleLoadFile.cpp  HttpModuleLogin.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  HttpSession.cpp
test/: Makefile  t_Address.cpp  t_DataArray.cpp  t_DataQueue.cpp  t_Socket.cpp  t_SocketBuf.cpp  t_Timer.cpp  t_back_client_0.cpp  t_back_server_0.cpp  t_echo_client_0.cpp  t_echo_server_0.cpp  t_echo_server_1.cpp  t_json_server_0.cpp  t_stdin_ipv4_talk.cpp  t_stdin_serialport_talk.cpp  t_stdin_v4l2_talk.cpp  test.cpp  阻塞echo_polloop.cpp  阻塞echo_while轮询.cpp  非阻塞WebSocket.cpp  非阻塞echo_polloop.cpp  非阻塞echo_while轮询.cpp
utils/: u_echo_server.cpp  u_epoll_echo_server.cpp  u_epoll_http_server.cpp  u_epoll_ws_server.cpp  u_http_server.cpp  u_raw_epoll_echo.cpp  u_raw_poll_echo.cpp  u_stdin_ipv4_talk.cpp  u_ws_server.cpp
